[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
clap = { version = "4.5.17", features = ["derive"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
